kustomize/miwp/base/namespace.yaml
---
# Namespace para todo
apiVersion:             v1
kind:                   Namespace
metadata:
    name:               wp-ivan
