kustomize/miwp/base/deployment.yaml
---
# Deployment WP
apiVersion:             apps/v1
kind:                   Deployment
metadata:
    name:               wp
    namespace:          wp-ivan
spec:
    replicas:           1
    selector:
        matchLabels:
            app:        wp ### REFERENCIA A (1)
    template:
        metadata:
            name:       wp-pod-template
            labels:
                app:    wp  # (1)
        spec:
            nodeSelector:
                nodo: ivan
            volumes:
                - name: datos-persistentes
                  persistentVolumeClaim:
                    claimName: pvc-wp
            containers:
                - name:         wp
                  image:        wordpress:6.4 # La ultima 6.4, con su apache ready to go!
                  volumeMounts:
                    - name:      datos-persistentes
                      mountPath: /var/www/html
